# EKS-CLUSTER

./: Dockerfile  README.md  generate_all.py  pyproject.toml
CreateCluster/: CreateAndConfigureCluster.sh  README.md  SubNets-Tags.tf  variables.tf
ExampleApp/: 02.Deployment.yaml  03.Service.yaml  04.Ingress.yaml  CreateDemoApp.sh  README.md
Logging/: ClusterLogging.sh  FluentBit.yaml  FluentBit.yaml.template  README.md
Roles/: AmazonEKSManagerPolicy.json  CreateUserAndRoles.sh  ManagerRole.tf  ManagerRole.yaml  ManagerRole.yaml.template  README.md  variables.tf
VPC/: CreateVPC.sh  README.md  main.tf  variables.tf
