[tool.poetry]
name = "albochallenge"
version = "0.1.0"
description = ""
authors = ["Jesús Quevedo <jenrique_qt@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
kubernetes = "^27.2.0"
boto3 = "^1.28.39"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
